--- a/app/static/index.html
+++ b/app/static/index.html
@@ -2,128 +2,89 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Frontend TFC ASIR Docker</title>
-    <link rel="stylesheet" href="/static/style.css">
+    <title>TFC Alejandro</title>
+    <style>
+        body { font-family: sans-serif; }
+        #contenido, #hola-section, #adios-section { display: none; }
+    </style>
 </head>
 <body>
-    <div class="container">
-        <h1>TFC ASIR - Demo Frontend</h1>
-        <nav>
-            <button id="showLogin" class="active">Login</button>
-            <button id="showHola">Hola Mundo</button>
-            <button id="showAdios">Adiós Mundo</button>
-        </nav>
-        <form id="loginForm">
-            <label for="username">Usuario:</label>
-            <input type="text" id="username" required autocomplete="username">
-            <label for="password">Contraseña:</label>
-            <input type="password" id="password" required autocomplete="current-password">
-            <button type="submit" id="loginBtn">Entrar</button>
-        </form>
-        <div id="privateActions" style="display:none;">
-            <button id="logoutBtn" class="logout">Cerrar sesión</button>
-        </div>
-        <div class="output" id="output"></div>
+    <h1>Login simple</h1>
+    <form id="login-form">
+        <input type="text" id="username" placeholder="Usuario" required>
+        <input type="password" id="password" placeholder="Contraseña" required>
+        <button type="submit">Entrar</button>
+    </form>
+    <div id="contenido">
+        <p>Bienvenido, <span id="usuario-logeado"></span>!</p>
+        <button id="hola-btn">Hola mundo</button>
     </div>
+    <div id="hola-section"></div>
+    <div id="adios-section"></div>
     <script>
-        let autenticado = false;
-        const showLogin = document.getElementById('showLogin');
-        const showHola = document.getElementById('showHola');
-        const showAdios = document.getElementById('showAdios');
-        const loginForm = document.getElementById('loginForm');
-        const privateActions = document.getElementById('privateActions');
-        const output = document.getElementById('output');
-        const logoutBtn = document.getElementById('logoutBtn');
+        let usuario = "";
 
-        function setSection(section) {
-            showLogin.classList.remove('active');
-            showHola.classList.remove('active');
-            showAdios.classList.remove('active');
-            loginForm.style.display = 'none';
-            output.innerHTML = '';
-            if (section === 'login') {
-                showLogin.classList.add('active');
-                loginForm.style.display = '';
-                privateActions.style.display = autenticado ? '' : 'none';
-            } else if (section === 'hola') {
-                showHola.classList.add('active');
-                loginForm.style.display = 'none';
-                fetchHola();
-            } else if (section === 'adios') {
-                showAdios.classList.add('active');
-                loginForm.style.display = 'none';
-                fetchAdios();
-            }
-        }
-        showLogin.onclick = () => setSection('login');
-        showHola.onclick = () => setSection('hola');
-        showAdios.onclick = () => setSection('adios');
+        const loginForm = document.getElementById('login-form');
+        const contenido = document.getElementById('contenido');
+        const usuarioLogeado = document.getElementById('usuario-logeado');
+        const holaSection = document.getElementById('hola-section');
+        const adiosSection = document.getElementById('adios-section');
 
-        loginForm.onsubmit = async function(e) {
+        loginForm.addEventListener('submit', function(e) {
             e.preventDefault();
-            output.innerHTML = '';
-            const username = document.getElementById('username').value.trim();
-            const password = document.getElementById('password').value;
-            const formData = new FormData();
-            formData.append("username", username);
-            formData.append("password", password);
-
-            try {
-                const res = await fetch('/login', { method: 'POST', body: formData });
-                const data = await res.json();
-                if (res.ok) {
-                    autenticado = true;
-                    output.innerHTML = '<b>Login correcto.</b>';
-                    privateActions.style.display = '';
+            usuario = document.getElementById('username').value;
+            const pass = document.getElementById('password').value;
+            fetch('/login', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ username: usuario, password: pass })
+            })
+            .then(res => res.json())
+            .then(data => {
+                if (data.autenticado === 'si') {
+                    loginForm.style.display = 'none';
+                    contenido.style.display = 'block';
+                    usuarioLogeado.textContent = usuario;
                 } else {
-                    autenticado = false;
-                    output.innerHTML = `<span class="error">${data.detail || "Login incorrecto"}</span>`;
+                    alert('Usuario o contraseña incorrectos');
                 }
-            } catch (err) {
-                output.innerHTML = `<span class="error">Error de conexión con el servidor.</span>`;
-            }
-        };
+            });
+        });
 
-        logoutBtn.onclick = function() {
-            autenticado = false;
-            output.innerHTML = "Sesión cerrada.";
-            privateActions.style.display = 'none';
-            setSection('login');
-        };
-
-        async function fetchHola() {
-            output.innerHTML = 'Cargando...';
-            try {
-                const res = await fetch('/holamundo', {
-                    headers: { 'autenticado': autenticado ? 'si' : '' }
+        document.getElementById('hola-btn').addEventListener('click', function() {
+            // Oculta menú, muestra la sección hola
+            contenido.style.display = 'none';
+            adiosSection.style.display = 'none';
+            holaSection.style.display = 'block';
+            fetch('/holamundo', { headers: { 'autenticado': 'si' } })
+                .then(res => res.text())
+                .then(msg => {
+                    holaSection.innerHTML = `
+                        <h2>Hola mundo</h2>
+                        <p>${msg}</p>
+                        <button id="ir-adios">Ir a Adiós mundo</button>
+                    `;
+                    document.getElementById('ir-adios').onclick = () => {
+                        holaSection.style.display = 'none';
+                        adiosSection.style.display = 'block';
+                        // Llama a /adiosmundo y muestra la pregunta
+                        fetch('/adiosmundo', { headers: { 'autenticado': 'si' } })
+                            .then(res => res.text())
+                            .then(adiosMsg => {
+                                adiosSection.innerHTML = `
+                                    <h2>¿Seguro que quiere salir, <span id="nombre-usuario"></span>?</h2>
+                                    <p>${adiosMsg}</p>
+                                    <button id="volver-menu">No, volver</button>
+                                `;
+                                document.getElementById('nombre-usuario').textContent = usuario;
+                                document.getElementById('volver-menu').onclick = () => {
+                                    adiosSection.style.display = 'none';
+                                    contenido.style.display = 'block';
+                                }
+                            });
+                    };
                 });
-                const data = await res.json();
-                if (res.ok) {
-                    output.innerHTML = `<pre>${JSON.stringify(data, null, 2)}</pre>`;
-                } else {
-                    output.innerHTML = `<span class="error">${data.detail || "Acceso denegado"}</span>`;
-                }
-            } catch (err) {
-                output.innerHTML = `<span class="error">No se pudo conectar con el backend.</span>`;
-            }
-        }
-        async function fetchAdios() {
-            output.innerHTML = 'Cargando...';
-            try {
-                const res = await fetch('/adiosmundo', {
-                    headers: { 'autenticado': autenticado ? 'si' : '' }
-                });
-                const data = await res.json();
-                if (res.ok) {
-                    output.innerHTML = `<pre>${JSON.stringify(data, null, 2)}</pre>`;
-                } else {
-                    output.innerHTML = `<span class="error">${data.detail || "Acceso denegado"}</span>`;
-                }
-            } catch (err) {
-                output.innerHTML = `<span class="error">No se pudo conectar con el backend.</span>`;
-            }
-        }
-        setSection('login');
+        });
     </script>
 </body>
 </html>
