--- a/app/static/index.html
+++ b/app/static/index.html
@@ -14,108 +14,6 @@
     </form>
     <div id="hola-section" style="display:none;"></div>
     <div id="adios-section" style="display:none;"></div>
-    <script>
-        let usuario = "";
-
-        const loginTitle = document.getElementById('login-title');
-        const loginForm = document.getElementById('login-form');
-        const holaSection = document.getElementById('hola-section');
-        const adiosSection = document.getElementById('adios-section');
-
-        // Mostrar login y título
-        function mostrarLogin() {
-            loginForm.reset();
-            loginTitle.style.display = 'block';
-            loginForm.style.display = 'block';
-            holaSection.style.display = 'none';
-            adiosSection.style.display = 'none';
-            usuario = "";
-        }
-
-        // Ocultar login y título
-        function ocultarLogin() {
-            loginTitle.style.display = 'none';
-            loginForm.style.display = 'none';
-        }
-
-        // Mostrar la pantalla principal (hola)
-        function mostrarHola() {
-            holaSection.style.display = 'block';
-            adiosSection.style.display = 'none';
-            fetch('/holamundo', { headers: { 'autenticado': 'si' } })
-                .then(res => res.text())
-                .then(msg => {
-                    holaSection.innerHTML = `
-                        <h2>Hola mundo</h2>
-                        <p>Bienvenido, <span id="usuario-logeado"></span>!</p>
-                        <p>${msg}</p>
-                        <button id="ir-adios">Ir a Adiós mundo</button>
-                    `;
-                    document.getElementById('usuario-logeado').textContent = usuario;
-                    document.getElementById('ir-adios').onclick = mostrarAdios;
-                });
-        }
-
-        function mostrarAdios() {
-            holaSection.style.display = 'none';
-            adiosSection.style.display = 'block';
-            fetch('/adiosmundo', { headers: { 'autenticado': 'si' } })
-                .then(res => res.text())
-                .then(adiosMsg => {
-                    adiosSection.innerHTML = `
-                        <h2>¿Seguro que quiere salir, <span id="nombre-usuario"></span>?</h2>
-                        <button id="logout-btn">Desloguearse</button>
-                    `;
-                    document.getElementById('nombre-usuario').textContent = usuario;
-                    document.getElementById('logout-btn').onclick = mostrarLogin;
-                });
-        }
-
-        loginForm.addEventListener('submit', function(e) {
-            e.preventDefault();
-            usuario = document.getElementById('username').value;
-            const pass = document.getElementById('password').value;
-            fetch('/login', {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ username: usuario, password: pass })
-            })
-            .then(res => res.json())
-            .then(data => {
-                if (data.autenticado === 'si') {
-                    ocultarLogin();
-                    mostrarHola();
-                } else {
-                    alert('Usuario o contraseña incorrectos');
-                }
-            });
-        });
-
-        // Por si recargas y hay que mostrar login por defecto
-        mostrarLogin();
-	function mostrarHola() {
-    holaSection.style.display = 'block';
-    adiosSection.style.display = 'none';
-    fetch('/holamundo', {
-        headers: {
-            'autenticado': 'si',
-            'usuario': usuario
-        }
-    })
-    .then(res => res.json())
-    .then(data => {
-        holaSection.innerHTML = `
-            <h2>${data.bienvenida}</h2>
-            <p>Bienvenido, ${data.usuario}!</p>
-            <p><b>Provincia:</b> ${data.provincia}</p>
-	    <img src="${data.foto_perfil}" alt="Foto de perfil" style="width:100px;height:100px;border-radius:50%;object-fit:cover;margin-bottom:1rem;">
-	    <p><b>Edad:</b> ${data.edad}</p>
-            <p><b>Tiempo actual:</b> ${data.tiempo}</p>
-            <button id="ir-adios">Ir a Adiós mundo</button>
-        `;
-        document.getElementById('ir-adios').onclick = mostrarAdios;
-    });
-}
-    </script>
+    <script src="/static/main.js"></script>
 </body>
 </html>
