--- a/app/static/welcome.html
+++ b/app/static/welcome.html
@@ -9,7 +9,7 @@
     <div class="container">
         <h1 id="mensaje">Cargando...</h1>
         <p id="usuario"></p>
-        <a href="?tipo=adios" id="adios-link">Ir a despedida</a>
+        <a href="?tipo=adios" id="adios-link">Salir</a>
     </div>
 
     <script>
